[package]
name = "ipxe-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
poem = "1.3"
poem-openapi = { version = "2.0", features = ["swagger-ui"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5.9"

