[package]
name = "candyadm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
env_logger = "0.9.3"
log = "0.4.17"
poem = "1.3"
poem-openapi = { version = "2.0", features = ["swagger-ui"] }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5.9"

